Fixing wiki-page overlapping breadcrumbs

--- a/sass/application.scss
+++ b/sass/application.scss
@@ -1825,7 +1825,7 @@ table#time-report tbody tr.total {
 }
 
 div.wiki-page {
-  &:after {
+  &:before {
     content: "";
     display: table;
     clear: both;
